Docker Cloud/Docker AWS/Docker AWS EKS/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: my-app
  labels:
    app: my-app
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
